WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
185365
InPlaceAbstractState::beginBasicBlock shouldn't have to clear any abstract values
https://bugs.webkit.org/show_bug.cgi?id=185365
Summary
InPlaceAbstractState::beginBasicBlock shouldn't have to clear any abstract va...
Filip Pizlo
Reported
2018-05-06 13:43:22 PDT
Patch forthcoming.
Attachments
the patch
(23.28 KB, patch)
2018-05-06 13:47 PDT
,
Filip Pizlo
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2018-05-06 13:47:01 PDT
Created
attachment 339690
[details]
the patch
EWS Watchlist
Comment 2
2018-05-06 13:49:11 PDT
Attachment 339690
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/dfg/DFGGraph.h:87: _edgeIndex is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] ERROR: Source/JavaScriptCore/dfg/DFGGraph.h:88: _edge is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 2 in 13 files If any of these errors are false positives, please file a bug against check-webkit-style.
Saam Barati
Comment 3
2018-05-07 15:31:32 PDT
Comment on
attachment 339690
[details]
the patch View in context:
https://bugs.webkit.org/attachment.cgi?id=339690&action=review
r=me
> Source/WTF/wtf/TinyPtrSet.h:30 > +#include <wtf/DataLog.h>
no need for this.
> Tools/ChangeLog:8 > + Make it possible to measure compile times.
nice!
Filip Pizlo
Comment 4
2018-05-07 17:07:44 PDT
Landed in
https://trac.webkit.org/changeset/231468/webkit
Radar WebKit Bug Importer
Comment 5
2018-05-07 17:12:03 PDT
<
rdar://problem/40043054
>
Ryan Haddad
Comment 6
2018-05-07 17:17:15 PDT
This change broke the CLoop build: /Volumes/Data/slave/highsierra-cloop-debug/build/Source/JavaScriptCore/jsc.cpp:1816:37: error: use of undeclared identifier 'JIT' return JSValue::encode(jsNumber(JIT::totalCompileTime().milliseconds()));
https://build.webkit.org/builders/Apple%20High%20Sierra%20LLINT%20CLoop%20%28BuildAndTest%29/builds/5711
Ryan Haddad
Comment 7
2018-05-08 10:53:00 PDT
Reverted
r231468
for reason: Broke the CLoop build Committed
r231492
: <
https://trac.webkit.org/changeset/231492
>
Filip Pizlo
Comment 8
2018-05-08 14:49:46 PDT
Landed in
https://trac.webkit.org/changeset/231514/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug