Source/JavaScriptCore/dfg/DFGAbstractInterpreterInlines.h
@@ -3410,8 +3410,6 @@ bool AbstractInterpreter<AbstractStateType>::executeEffects(unsigned clobberLimi
     case CheckTraps:
     case LogShadowChickenPrologue:
     case LogShadowChickenTail:
-        break;
-
     case ProfileType:
     case ProfileControlFlow:
     case Phantom:
@@ -3421,6 +3419,10 @@ bool AbstractInterpreter<AbstractStateType>::executeEffects(unsigned clobberLimi
     case CheckTypeInfoFlags:
     case SuperSamplerBegin:
     case SuperSamplerEnd:
+    case CheckTierUpAndOSREnter:
+    case LoopHint:
+    case ZombieHint:
+    case ExitOK:
         break;
 
     case ParseInt: {
@@ -3483,10 +3485,6 @@ bool AbstractInterpreter<AbstractStateType>::executeEffects(unsigned clobberLimi
         break;
     }
         
-    case CheckTierUpAndOSREnter:
-    case LoopHint:
-    case ZombieHint:
-    case ExitOK:
         break;
 
     case Unreachable:
